# simple-password-manager

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  runandbuild.sh  rundebug.sh
data/: UserLogin.db
include/controller/: appmanager.hpp
include/errors/: dbexception.hpp
include/gui/: confirmdialog.hpp  insertdialog.hpp  loginmenu.hpp  usermenu.hpp
include/model/: appmodel.hpp  dbhandler.hpp  loginhandler.hpp  passwordentry.hpp  user.hpp
src/controller/: appmanager.cpp
src/errors/: dbexception.cpp
src/gui/: confirmdialog.cpp  insertdialog.cpp  loginmenu.cpp  usermenu.cpp
src/model/: appmodel.cpp  dbhandler.cpp  loginhandler.cpp  passwordentry.cpp  user.cpp
